add html content

--- a/PriceSection/pricesection.html
+++ b/PriceSection/pricesection.html
@@ -6,5 +6,53 @@
     <title>Price Section</title>
     <link rel="stylesheet" href="pricestyle.css" />
   </head>
-  <body></body>
+  <body>   <section class="cs-container">
+    <h1 class="pricing">Pricing</h1>
+    <h2 class="title">Choose Pricing Plans</h2>
+    <a href="" class="button">Read More</a>
+   </section>
+   <section>
+     <div>
+       <ul>
+       <li class="benefits">Access to All CLUB4 Locations</li>
+       <li class="benefits">Fitness Floor & Cardio</li>
+       <li class="benefits">Studio Fitness & Les Mills Classes</li>
+       <li class="benefits">Tanning/Red-Light Therapy</li>
+       <li class="benefits">Guest Passes & Bottled Water</li>
+       <li class="benefits">30-Minute Fitness Consultation</li>
+       <li class="benefits">Techniques Class</li>
+       <li class="benefits">Personal Training Options</li>
+       <li class="benefits">Lockers</li>
+       <li class="benefits">Showers</li>
+     </ul>
+   </div>
+   <div> 
+     <div> 
+       <span class="type"> FREE PASS </span>
+     </div>
+     <span class="price"> $49.99 </span>
+     <span class="time"> /Month </span>
+     <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
+       <a href="" class="button">Buy Now</a>
+   </div>
+   <div> 
+     <div> 
+       <span class="type"> WEEKLY PASS </span>
+     </div>
+     <span class="price"> $99.99 </span>
+     <span class="time"> /Month </span>
+     <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
+     <a href="" class="button">Buy Now</a>
+   </div>
+   <div> 
+     <div> 
+       <span class="type"> MONTHLY PASS </span>
+     </div>
+     <span class="price"> $149.99 </span>
+     <span class="time"> /Month </span>
+     <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
+     <a href="" class="button">Buy Now</a>
+   </div>
+   </section>
+</body>
 </html>
