add: Add navbar navigation

--- a/HeroSection/index.html
+++ b/HeroSection/index.html
@@ -29,6 +29,24 @@
       </div>
     </div>
     <hr />
+    <nav class="navbar">
+      <div class="container-nav">
+        <img class="logo" src="../assets/Logo.png" alt="Logo Gym" />
+        <ul class="links-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Classes</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+        <a href="#" class="call-to-action">Join Us Today</a>
+        <img
+          class="menu-hamburguer"
+          src="../assets/hamburguer.png"
+          alt="Menu Hamburguer"
+        />
+      </div>
+    </nav>
     <section id="hero">
       <div class="container">
         <div class="content">
