--- a/PriceSection/pricesection.html
+++ b/PriceSection/pricesection.html
@@ -6,11 +6,11 @@
     <title>Price Section</title>
     <link rel="stylesheet" href="pricestyle.css" />
   </head>
-  <body>   <section class="cs-container">
-    <h1 class="pricing">Pricing</h1>
+  <body>   <div class="cs-container">
+    <h1 class="pricing">PRICING</h1>
     <h2 class="title">Choose Pricing Plans</h2>
     <a href="" class="button">Read More</a>
-   </section>
+  </div>
    <section>
      <div>
        <ul>
@@ -28,7 +28,7 @@
    </div>
    <div> 
      <div> 
-       <span class="type"> FREE PASS </span>
+       <span class="typea"> FREE PASS </span>
      </div>
      <span class="price"> $49.99 </span>
      <span class="time"> /Month </span>
@@ -37,7 +37,7 @@
    </div>
    <div> 
      <div> 
-       <span class="type"> WEEKLY PASS </span>
+       <span class="typeb"> WEEKLY PASS </span>
      </div>
      <span class="price"> $99.99 </span>
      <span class="time"> /Month </span>
@@ -46,7 +46,7 @@
    </div>
    <div> 
      <div> 
-       <span class="type"> MONTHLY PASS </span>
+       <span class="typea"> MONTHLY PASS </span>
      </div>
      <span class="price"> $149.99 </span>
      <span class="time"> /Month </span>
