--- a/PriceSection/pricesection.html
+++ b/PriceSection/pricesection.html
@@ -6,14 +6,15 @@
     <title>Price Section</title>
     <link rel="stylesheet" href="pricestyle.css" />
   </head>
-  <body>   <div class="cs-container">
+  <body>   
+  <div class="cs-container">
     <h1 class="pricing">PRICING</h1>
     <h2 class="title">Choose Pricing Plans</h2>
-    <a href="" class="button">Read More</a>
+    <button href="" class="button">Read More</button>
   </div>
    <section>
      <div>
-       <ul>
+      <ul>
        <li class="benefits">Access to All CLUB4 Locations</li>
        <li class="benefits">Fitness Floor & Cardio</li>
        <li class="benefits">Studio Fitness & Les Mills Classes</li>
@@ -24,8 +25,8 @@
        <li class="benefits">Personal Training Options</li>
        <li class="benefits">Lockers</li>
        <li class="benefits">Showers</li>
-     </ul>
-   </div>
+      </ul>
+    </div>
    <div> 
      <div> 
        <span class="typea"> FREE PASS </span>
@@ -33,7 +34,7 @@
      <span class="price"> $49.99 </span>
      <span class="time"> /Month </span>
      <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
-       <a href="" class="button">Buy Now</a>
+       <button href="" class="button">Buy Now</button>
    </div>
    <div> 
      <div> 
@@ -42,7 +43,7 @@
      <span class="price"> $99.99 </span>
      <span class="time"> /Month </span>
      <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
-     <a href="" class="button">Buy Now</a>
+     <button href="" class="button">Buy Now</button>
    </div>
    <div> 
      <div> 
@@ -51,7 +52,7 @@
      <span class="price"> $149.99 </span>
      <span class="time"> /Month </span>
      <p> This month to month option allows you to workout up to four times a month. Reservation needed four timed.</p>
-     <a href="" class="button">Buy Now</a>
+     <button href="" class="button">Buy Now</button>
    </div>
    </section>
 </body>
