update: Update the README

--- a/PriceSection-Ult. Versión/index.html
+++ b/PriceSection-Ult. Versión/index.html
@@ -15,41 +15,43 @@
       <div class="container-info-detail">
         <ul>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Access to All
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Access to All
             CLUB4 Locations
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Fitness Floor &
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Fitness Floor &
             Cardio
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Studio Fitness &
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Studio Fitness &
             Les Mills Classes
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Tanning/Red-Light
-            Therapy
+            <img
+              src="../assets/Approve(Tick).svg"
+              alt="tick"
+            />Tanning/Red-Light Therapy
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Guest Passes &
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Guest Passes &
             Bottled Water
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />30-Minute Fitness
-            Consultation
+            <img src="../assets/Approve(Tick).svg" alt="tick" />30-Minute
+            Fitness Consultation
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Techniques Class
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Techniques Class
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Personal Training
-            Options
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Personal
+            Training Options
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Lockers
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Lockers
           </li>
           <li class="benefits">
-            <img src="./assets/Approve(Tick).svg" alt="tick" />Showers
+            <img src="../assets/Approve(Tick).svg" alt="tick" />Showers
           </li>
         </ul>
       </div>
