fixed: Format the code with Prettier

--- a/HeroSection/index.html
+++ b/HeroSection/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Hero Section</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -10,21 +10,29 @@
   <body>
     <div class="top-bar-details">
       <div class="top-bar-container">
-        <div class="contact-info">
-          <span class="span-message">
-            <img class="img-message" src="../assets/message.svg" alt="" />
-            <a id="company-email" href="#">stitchgym@gmail.com</a>
-          </span>
+        <address class="contact-info">
+          <a id="company-email" href="mailto:stitchgym@gmail.com"
+            >stitchgym@gmail.com</a
+          >
           <span id="slash">|</span>
           <span>Call us: +84 1985 33 999</span>
           <span id="slash">|</span>
           <span>Opening hours: Mon - Sat: 8:00am To 9:00pm</span>
           <span id="slash">|</span>
-        </div>
+        </address>
         <div class="social-media">
-          <a href="#"><img src="../assets/Facebook.svg" alt="Facebook" /></a>
-          <a href="#"><img src="../assets/Twitter.svg" alt="Twitter" /></a>
-          <a href="#"><img src="../assets/Instagram.svg" alt="Instagram" /></a>
+          <a href="#"
+            ><span class="sr-only">Logo Facebook</span
+            ><img src="../assets/Facebook.svg" alt="Facebook"
+          /></a>
+          <a href="#"
+            ><span class="sr-only">Logo Twitter</span
+            ><img src="../assets/Twitter.svg" alt="Twitter"
+          /></a>
+          <a href="#"
+            ><span class="sr-only">Logo Instagram</span
+            ><img src="../assets/Instagram.svg" alt="Instagram"
+          /></a>
         </div>
       </div>
     </div>
@@ -43,19 +51,19 @@
         <img
           class="menu-hamburguer"
           src="../assets/hamburguer.png"
-          alt="Menu Hamburguer"
+          alt="Icon of menu hamburguer"
         />
       </div>
     </nav>
     <section id="hero">
       <div class="container">
         <div class="content">
-          <div class="topper">Best Gym Of The City For Fitness</div>
-          <div class="title">You Can Boost Your Strength</div>
-          <div class="text">
+          <h4 class="topper">Best Gym Of The City For Fitness</h4>
+          <h1 class="title">You Can Boost Your Strength</h1>
+          <p class="text">
             Develop confidence, composure under pressure and the discipline
             needed to be a champ. This is the club you’ve been looking for.
-          </div>
+          </p>
           <div class="button-group">
             <a href="" class="button-solid">Read More</a>
           </div>
@@ -65,13 +73,13 @@
       <img
         class="background"
         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/gym-hero.png"
-        alt="background-image"
+        alt="Background image where you can see a man in the gym."
       />
 
       <img
         class="graphic"
         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/white-splatter2.svg"
-        alt="graphic"
+        alt="Graphic to decorate the background."
         height="161"
         width="1920"
         loading="lazy"
