fixed: Verify the type of button tag.

--- a/PriceSection-LatestVersion/index.html
+++ b/PriceSection-LatestVersion/index.html
@@ -55,7 +55,7 @@
           </li>
         </ul>
       </div>
-      <button class="container-submit">Read More</button>
+      <button type="button" class="container-submit">Read More</button>
       <div class="cards-price">
         <div class="card">
           <h4 class="typea">FREE PASS</h4>
@@ -64,7 +64,7 @@
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button type="button" class="container-submit">Buy Now</button>
         </div>
         <div class="card top">
           <h4 class="typea">WEEKLY PASS</h4>
@@ -73,7 +73,7 @@
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button type="button" class="container-submit">Buy Now</button>
         </div>
         <div class="card">
           <h4 class="typea">MONTHLY PASS</h4>
@@ -82,7 +82,7 @@
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button type="button" class="container-submit">Buy Now</button>
         </div>
       </div>
     </section>
