--- a/PriceSection-Ult. Versión/index.html
+++ b/PriceSection-Ult. Versión/index.html
@@ -7,82 +7,82 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="cs-container">
-      <div class="container-title">
+    <section class="container">
+      <div class="container__title">
         <h3>Pricing</h3>
         <h1 id="title-section">Choose Pricing Plans</h1>
       </div>
-      <div class="container-info-detail">
+      <div class="container__detail">
         <ul>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Access to All
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Access to All
             CLUB4 Locations
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Fitness Floor &
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Fitness Floor &
             Cardio
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Studio Fitness &
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Studio Fitness &
             Les Mills Classes
           </li>
-          <li class="benefits">
+          <li class="container__benefits">
             <img
-              src="../assets/Approve(Tick).svg"
+              src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg"
               alt="tick"
             />Tanning/Red-Light Therapy
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Guest Passes &
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Guest Passes &
             Bottled Water
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />30-Minute
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />30-Minute
             Fitness Consultation
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Techniques Class
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Techniques Class
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Personal
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Personal
             Training Options
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Lockers
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Lockers
           </li>
-          <li class="benefits">
-            <img src="../assets/Approve(Tick).svg" alt="tick" />Showers
+          <li class="container__benefits">
+            <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/mech-check.svg" alt="tick" />Showers
           </li>
         </ul>
       </div>
-      <button class="container-submit">Read More</button>
-      <div class="cards-price">
+      <button class="container__submit">Read More</button>
+      <div class="cards__price">
         <div class="card">
-          <h4 class="typea">FREE PASS</h4>
+          <h4 class="card__regular">FREE PASS</h4>
           <h2 class="price">$49.99<span class="time">/Month</span></h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button href="" class="container__submit">Buy Now</button>
         </div>
-        <div class="card top">
+        <div class="card__top">
           <h4 class="typea">WEEKLY PASS</h4>
           <h2 class="price">$99.99<span class="time">/Month</span></h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button href="" class="container__submit">Buy Now</button>
         </div>
         <div class="card">
-          <h4 class="typea">MONTHLY PASS</h4>
+          <h4 class="card">MONTHLY PASS</h4>
           <h2 class="price">$149.99<span class="time">/Month</span></h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button href="" class="container-submit">Buy Now</button>
+          <button href="" class="container__submit">Buy Now</button>
         </div>
       </div>
     </section>
