add: Refactor from CSS to Sass by Sebastian

--- a/PriceSection-LatestVersion/index.html
+++ b/PriceSection-LatestVersion/index.html
@@ -4,85 +4,97 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Price Section</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./dist/css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <section class="cs-container">
-      <div class="container-title">
+    <section class="pricing responsive">
+      <div class="pricing__title">
         <h3>Pricing</h3>
-        <h1 id="title-section">Choose Pricing Plans</h1>
+        <h1 id="pricing__titleMain">Choose Pricing Plans</h1>
       </div>
-      <div class="container-info-detail">
+      <div class="pricing__benefits">
         <ul>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Access to All
             CLUB4 Locations
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Fitness Floor &
             Cardio
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Studio Fitness &
             Les Mills Classes
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img
               src="../assets/Approve(Tick).svg"
               alt="tick"
             />Tanning/Red-Light Therapy
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Guest Passes &
             Bottled Water
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />30-Minute
             Fitness Consultation
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Techniques Class
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Personal
             Training Options
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Lockers
           </li>
-          <li class="benefits">
+          <li class="pricing__benefit">
             <img src="../assets/Approve(Tick).svg" alt="tick" />Showers
           </li>
         </ul>
       </div>
-      <button type="button" class="container-submit">Read More</button>
-      <div class="cards-price">
-        <div class="card">
-          <h4 class="typea">FREE PASS</h4>
-          <h2 class="price">$49.99<span class="time">/Month</span></h2>
+      <button type="button" class="pricing__button">Read More</button>
+      <div class="pricing__cards">
+        <div class="pricing__card">
+          <h4 class="pricing__cardTitle">FREE PASS</h4>
+          <h2 class="pricing__cardPrice">
+            $49.99<span class="pricing__cardTime">/Month</span>
+          </h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button type="button" class="container-submit">Buy Now</button>
+          <button type="button" class="pricing__button">Buy Now</button>
         </div>
-        <div class="card top">
-          <h4 class="typea">WEEKLY PASS</h4>
-          <h2 class="price">$99.99<span class="time">/Month</span></h2>
+        <div class="pricing__card pricing__card--top">
+          <h4 class="pricing__cardTitle">WEEKLY PASS</h4>
+          <h2 class="pricing__cardPrice">
+            $99.99<span class="pricing__cardTime">/Month</span>
+          </h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button type="button" class="container-submit">Buy Now</button>
+          <button type="button" class="pricing__button">Buy Now</button>
         </div>
-        <div class="card">
-          <h4 class="typea">MONTHLY PASS</h4>
-          <h2 class="price">$149.99<span class="time">/Month</span></h2>
+        <div class="pricing__card pricing_card--top">
+          <h4 class="pricing__cardTitle">MONTHLY PASS</h4>
+          <h2 class="pricing__cardPrice">
+            $149.99<span class="pricing__cardTime">/Month</span>
+          </h2>
           <p>
             This month to month option allows you to workout up to four times a
             month. Reservation needed four timed.
           </p>
-          <button type="button" class="container-submit">Buy Now</button>
+          <button type="button" class="pricing__button">Buy Now</button>
         </div>
       </div>
     </section>
